--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</div>	
 	
 
-	<script src="./script/acceptCam.js" type="text/javascript" defer></script>
+	<script src="./script/acceptCam.js" type="text/javascript"></script>
 	<script src="./script/quagga.min.js"></script>
 	<script src="./script/settings.js"></script>
 	<script src="./script/customQuagga.js"></script>
